--- a/css/styles.css
+++ b/css/styles.css
@@ -55,6 +55,8 @@ p {
 
 .page-header {
   border-bottom: 1px solid #e7e9fc;
+  box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08),
+    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 2px 1px 0 rgba(46, 47, 66, 0.08);
 }
 
 .page-navigation {
@@ -127,7 +129,7 @@ p {
   display: block;
   padding-top: 24px;
   padding-bottom: 24px;
-  transition: color cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .address-link:hover,
@@ -234,6 +236,9 @@ p {
 }
 
 .icon-box {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   border: 1px solid #8e8f99;
   border-radius: 4px;
   width: 264px;
@@ -244,6 +249,7 @@ p {
   padding-right: 100px;
   padding-bottom: 24px;
   padding-left: 100px;
+  margin-bottom: 8px;
 }
 
 .icons-list {
@@ -315,7 +321,7 @@ p {
 
 .name-card {
   padding-top: 32px;
-  padding-bottom: 8px;
+  padding-bottom: 32px;
 }
 
 .icons-list {
@@ -323,12 +329,12 @@ p {
   gap: 24px;
   align-items: center;
   justify-content: center;
+  padding-top: 8px;
   padding-right: 16px;
-  padding-bottom: 32px;
   padding-left: 16px;
 }
 
-.team-icon {
+.icons-list-item {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -336,20 +342,13 @@ p {
   height: 40px;
   border-radius: 50%;
   background-color: #4d5ae5;
+  fill: #f4f4fd;
 }
 
-.team-icon:hover,
-.team-icon:focus {
+.icons-list-item:hover,
+.icons-list-item:focus {
   background-color: #404bbf;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.team-card-full {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  gap: 8px;
 }
 
 /* ==============OUR PORTFOLIO STYLES============== */
@@ -374,6 +373,12 @@ p {
 
 .portfolio-list-item {
   width: calc((100% - 48px) / 3);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-list-item:hover {
+  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
+    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
 
 .portfolio-list-title {
@@ -413,9 +418,7 @@ p {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #f4f4fd;
-  padding-top: 40px;
-  padding-right: 32px;
-  padding-left: 32px;
+  padding: 40px 32px;
   position: absolute;
   top: 0;
   left: 0;
@@ -463,15 +466,15 @@ p {
 
 .footer-container {
   display: flex;
-  gap: 120px;
+  align-items: baseline;
 }
 
-.footer-title {
+.footer-text {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: #fff;
+  color: #ffffff;
   margin-bottom: 16px;
 }
 
@@ -491,10 +494,15 @@ p {
   height: 40px;
   border-radius: 50%;
   background-color: #4d5ae5;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  fill: #f4f4fd;
 }
 
 .footer-icon:hover,
 .footer-icon:focus {
   background-color: #31d0aa;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.logo-box {
+  margin-right: 120px;
 }
