--- a/css/styles.css
+++ b/css/styles.css
@@ -335,19 +335,24 @@ p {
 }
 
 .icons-list-item {
-  display: flex;
-  justify-content: center;
-  align-items: center;
   width: 40px;
   height: 40px;
-  border-radius: 50%;
-  background-color: #4d5ae5;
-  fill: #f4f4fd;
 }
 
 .icons-list-item:hover,
 .icons-list-item:focus {
   background-color: #404bbf;
+}
+
+.link-icon {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  background-color: #4d5ae5;
+  fill: #f4f4fd;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
